--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "graphql": "^0.8.2",
     "jest": "^17.0.3",
     "jest-cli": "^17.0.3",
+    "lokka": "^1.7.0",
+    "lokka-transport-http": "^1.6.1",
     "react": "^15.2.1",
     "react-addons-test-utils": "^15.4.0",
     "react-dom": "^15.2.1"
