--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HackathonSampleReactApp",
+  "name": "WarsawUMGraphQLAPI",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,11 +24,7 @@
     "jest": "^17.0.3",
     "jest-cli": "^17.0.3",
     "json-loader": "^0.5.4",
-    "lokka": "^1.7.0",
-    "lokka-transport-http": "^1.6.1",
-    "react": "^15.2.1",
-    "react-addons-test-utils": "^15.4.0",
-    "react-dom": "^15.2.1",
+    "node-rest-client": "^3.1.0",
     "webpack": "^1.12.12"
   },
   "repository": {},
